--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 
 
 a{
-  color: inherit;
+  color: #fcfcfc;
   text-decoration: none;
 }
 
@@ -156,7 +156,6 @@ button:focus { outline:0; }
   }
 }
 
-
 /* --------------------------------
  *          navigation
  *--------------------------------*/
@@ -164,6 +163,7 @@ button:focus { outline:0; }
 /* sidemenu-left */
 .sidemenu-left {
   font-size: 2.5rem;
+  text-shadow: 1px 1px 8px #444444;
   width: 100vh;
   margin-left: 40px;
   top: 0;
@@ -172,7 +172,7 @@ button:focus { outline:0; }
   -webkit-transform: rotate(-90deg) translateX(-100%);
   transform-origin: left top;
   transform: rotate(-90deg) translateX(-100%);
-  z-index: 13;
+  z-index: 99;
 }
 
 .sidemenu-left ul {
@@ -214,7 +214,7 @@ button:focus { outline:0; }
   right: 40px;
   top: 36%;
   position: fixed;
-  z-index: 12;
+  z-index: 99;
   text-align: center;
   width: 3%;
 }
@@ -228,16 +228,21 @@ button:focus { outline:0; }
 }
 
 .sidemenu-right ul a {
-  text-decoration: none;
   color: #fcfcfc;
-}
-
-.sidemenu-right ul a {
   display: inline-block;
   text-decoration: none;
   font-size: 2.5rem;
   line-height: 2;
 }
+
+.drop-shadow{
+  -webkit-filter:drop-shadow(1px 1px 7px #444444);      
+  filter:drop-shadow(1px 1px 7px #444444);
+}
+
+
+
+
 /* /sidemenu-right */
 
 
@@ -328,9 +333,21 @@ button:focus { outline:0; }
  /* --------------------------------
  *          works
  *--------------------------------*/
+
+
+ 
+ .works-image-link{
+   display: block;
+   width: 100%;
+   height: 100%;
+ }
+
+
 .works-image{
+  z-index: 14;
   width: 70%;
   height: 450px;
+  overflow: hidden;
 }
 
 .works-text{
@@ -340,11 +357,42 @@ button:focus { outline:0; }
   background-color: #0c223f;
 }
 
-.works-image>img{
+.works-image > a >img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  -moz-transition: -moz-transform 0.3s linear;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  -o-transition: -o-transform 0.3s linear;
+  -ms-transition: -ms-transform 0.3s linear;
+  transition: transform 0.3s linear;
 }
+.works-image > a > img:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.works-image-odd > a >img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -moz-transition: -moz-transform 0.3s linear;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  -o-transition: -o-transform 0.3s linear;
+  -ms-transition: -ms-transform 0.3s linear;
+  transition: transform 0.3s linear;
+}
+.works-image-odd > a > img:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 
 
 .works-text-odd{
@@ -355,11 +403,12 @@ button:focus { outline:0; }
 }
 
 .works-image-odd{
+  overflow: hidden;
   height: 450px;
   width: 70%;
 }
 
-.works-image-odd>img{
+.works-image-odd > a >img{
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -397,35 +446,89 @@ button:focus { outline:0; }
   transform : translate(-50%,-50%);
 }
 
+/* works-button */
+
 .button-container{
   text-align: center;
 }
 
 .works-button{
+  font-size: 1.4rem;
+  color: #ffc41c;
+  font-family: 'Oswald', sans-serif;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
   width: 200px;
   height: 50px;
   background-color: #0C223F;
   border: 1px solid #ffc41c; 
+  overflow: hidden;
+  padding: 0;
 }
-
 .works-button-odd{
-  background-color: #ffc41c;
-  border: 1px solid #0C223F;
-}
-
-.button-text{
   font-size: 1.4rem;
-  color: #ffc41c;
+  color: #0C223F;
   font-family: 'Oswald', sans-serif;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  width: 200px;
+  height: 50px;
+  background-color: #ffc41c;
+  border: 1px solid #0C223F; 
+  overflow: hidden;
+  padding: 0;
 }
 
-.button-text-odd{
+
+/* button hover action */
+
+
+.works-button:hover {
   color: #0C223F;
 }
+
+.works-button-odd:hover {
+  color: #ffc41c;
+}
+
+.works-button::before,.works-button-odd::before,
+.works-button::after,.works-button-odd::after{
+  position: absolute;
+  z-index: -1;
+  display: block;
+  content: '';
+  top: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.works-button:hover::after {
+  top: 0;
+  background-color: #ffc41c;
+}
+
+.works-button-odd:hover::after {
+  top: 0;
+  background-color: #0C223F;
+}
+
+.works-button,.works-button-odd,
+.works-button::before,.works-button-odd::before,
+.works-button::after,.works-button-odd::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
 
 /* triangle */
 .triangle{
   position: absolute;
+  z-index: 14;
   top: 40%;
   left: -50px;
   width: 0;
@@ -437,6 +540,7 @@ button:focus { outline:0; }
 
 .triangle-odd{
   position: absolute;
+  z-index: 14;
   top: 40%;
   right: -50px;
   width: 0;
@@ -650,13 +754,13 @@ button:focus { outline:0; }
    text-align: center;
    height: 70px;
  }
- .toppage-link > a > .fas{
-   position: absolute;
-   font-size: 2.2rem;
-   color: #0C223F;
-   top: 50%;
-   left: 50%;
-   transform: translateY(-50%) translateX(-50%);
+ .toppage-link > a {
+  position: absolute;
+  color: #0C223F;
+  font-size: 2.2rem;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
  }
 
 /* --------------------------------
