--- a/css/style.css
+++ b/css/style.css
@@ -333,8 +333,6 @@ button:focus { outline:0; }
  /* --------------------------------
  *          works
  *--------------------------------*/
-
-
  
  .works-image-link{
    display: block;
@@ -367,7 +365,7 @@ button:focus { outline:0; }
   -ms-transition: -ms-transform 0.3s linear;
   transition: transform 0.3s linear;
 }
-.works-image > a > img:hover {
+.works-img-hover {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
@@ -385,14 +383,13 @@ button:focus { outline:0; }
   -ms-transition: -ms-transform 0.3s linear;
   transition: transform 0.3s linear;
 }
-.works-image-odd > a > img:hover {
+.works-img-odd-hover {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
-
 
 
 .works-text-odd{
@@ -485,11 +482,11 @@ button:focus { outline:0; }
 /* button hover action */
 
 
-.works-button:hover {
+.works-button-hover {
   color: #0C223F;
 }
 
-.works-button-odd:hover {
+.works-button-odd-hover {
   color: #ffc41c;
 }
 
@@ -504,12 +501,12 @@ button:focus { outline:0; }
   height: 100%;
 }
 
-.works-button:hover::after {
+.works-button-hover::after {
   top: 0;
   background-color: #ffc41c;
 }
 
-.works-button-odd:hover::after {
+.works-button-odd-hover::after {
   top: 0;
   background-color: #0C223F;
 }
