--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,27 @@ button:focus { outline:0; }
  /* --------------------------------
  *          works
  *--------------------------------*/
+
+ .comming-relative{
+   position: relative;
+ }
+ 
+ .comming-container{
+   position: absolute;
+   z-index: 9999;
+   width: 500px;
+   height: auto;
+   top: 50%;
+   left: 50%;
+   -webkit-transform : translate(-50%,-50%);
+   transform : translate(-50%,-50%);
+ }
+
+ .comming-soon{
+   object-fit: cover;
+    width: 100%;
+    height: 100%;
+ }
  
  .works-image-link{
    display: block;
